# arrow_leco

./: .gitmodules
cpp/: CMakeLists.txt  CMakePresets.json  drop_cache.sh
cpp/cmake_modules/: SetupCxxFlags.cmake
cpp/experiments/: Anunciante_dict_no_snappy.json  Anunciante_dict_snappy.json  Medicare1_dict_no_snappy.json  Medicare1_dict_no_snappy_orc.json  Medicare1_dict_snappy.json  Medicare1_dict_snappy_orc.json  PrimeraLinea_dict_snappy.json  lineitem.json  orders.json
cpp/output/: 20220915_174427.csv
cpp/src/arrow/: CMakeLists.txt  buffer.cc  buffer.h  buffer_builder.h  visit_data_inline.h  visit_type_inline.h
cpp/src/arrow/array/: array_base.h  builder_primitive.h  concatenate.cc  data.cc  data.h
cpp/src/arrow/compute/: CMakeLists.txt
cpp/src/arrow/compute/exec/: aggregate.cc  key_hash.cc  key_hash.h  key_map.cc
cpp/src/arrow/compute/kernels/: CMakeLists.txt  aggregate_basic_internal.h  aggregate_benchmark.cc  aggregate_codec_benchmark.cc  aggregate_groupby_codec.cc  aggregate_internal.h  chunked_internal.h  hash_aggregate.cc  vector_array_sort.cc  vector_filter_codec_benchmark.cc  vector_selection.cc  vector_selection_benchmark.cc  vector_selection_codec_benchmark.cc  vector_sort.cc  vector_sort_benchmark.cc  vector_sort_codec.cc
cpp/src/arrow/compute/row/: grouper.cc
cpp/src/arrow/dataset/: file_parquet.cc
cpp/src/arrow/io/: caching.cc
cpp/src/arrow/leco/: FOR_integer_template.h  delta_integer_template.h  leco_bitop.h  piecewise_fix_integer_template.h
cpp/src/arrow/testing/: random.cc
cpp/src/arrow/util/: bit_run_reader.h  bit_stream_utils.h  io_util.cc  logging.h  openformat_config.h  openformat_stats.cc  openformat_stats.h  rle_encoding.h
cpp/src/open_format/: CMakeLists.txt  pq_reader.cc  pq_writer.cc  stats.h
cpp/src/openformat/: CMakeLists.txt  aggsum_bench.cc  buffer_builder_test.cc  dump-no-simd.txt  dump-simd.txt  filter_agg_int.cc  filter_bench.cc  filter_bitscan_groupby.cc  filter_groupbysum.cc  filter_groupbysum_chunked.cc  filter_int.cc  for.cc  for_64.cc  for_64_old.cc  for_64_zstd.cc  for_int32.cc  for_int64.cc  for_zstd.cc  leco_bitpos_exp.py  orc_reader.cc  plot_parquet.ipynb  pq_reader.cc  pq_writer.cc  process_ml_ts.ipynb  raw_orc_reader.cc  raw_reader.cc  raw_reader_async.cc  raw_reader_v2.cc  rle_test.cc  stats.h  take_bench.cc  test_binary.cc
cpp/src/openformat/data/one_table/: test.py
cpp/src/openformat/experiments/: Anunciante_both_no.json  Anunciante_dict.json  Anunciante_dict_no_snappy.json  Anunciante_dict_snappy.json  Anunciante_snappy.json  Generico_2_dict_snappy.json  lineitem.json
cpp/src/parquet/: CMakeLists.txt  column_reader.cc  column_reader.h  column_scanner.cc  column_scanner.h  encoding.cc  encoding.h  file_reader.cc  file_reader.h  printer.cc  properties.h  types.cc  types.h
cpp/src/parquet/arrow/: arrow_reader_writer_test.cc
